@@ -4,7 +4,7 @@
       "Binary.com <fayland@binary.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.5, Dist::Zilla version 5.014, CPAN::Meta::Converter version 2.133380",
+   "generated_by" : "Dist::Zilla version 5.031, Dist::Milla version v1.0.15, CPAN::Meta::Converter version 2.142690",
    "license" : [
       "perl_5"
    ],
@@ -26,17 +26,18 @@
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : "6.30"
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "develop" : {
          "requires" : {
+            "Dist::Milla" : "v1.0.15",
             "Test::Pod" : "1.41"
          }
       },
       "runtime" : {
          "requires" : {
-            "Mojo::UserAgent" : "0",
+            "Mojo::UserAgent" : "6.36",
             "XML::Simple" : "0",
             "perl" : "5.008005"
          }
@@ -60,8 +61,9 @@
          "web" : "https://github.com/binary-com/perl-WebService-MyAffiliates"
       }
    },
-   "version" : "0.04",
+   "version" : "0.05",
    "x_contributors" : [
+      "Fayland Lam <fayland@gmail.com>",
       "Jean-Yves Sireau <jy@binary.com>",
       "The Gitter Badger <badger@gitter.im>"
    ]
