@@ -1,34 +1,34 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.014.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.031.
 use strict;
 use warnings;
 
 use 5.008005;
 
-use ExtUtils::MakeMaker 6.30;
+use ExtUtils::MakeMaker;
 
 
 
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Interface to myaffiliates.com API",
   "AUTHOR" => "Binary.com <fayland\@binary.com>",
-  "BUILD_REQUIRES" => {},
   "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => "6.30"
+    "ExtUtils::MakeMaker" => 0
   },
   "DISTNAME" => "WebService-MyAffiliates",
   "EXE_FILES" => [],
   "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.008005",
   "NAME" => "WebService::MyAffiliates",
   "PREREQ_PM" => {
-    "Mojo::UserAgent" => 0,
+    "Mojo::UserAgent" => "6.36",
     "XML::Simple" => 0
   },
   "TEST_REQUIRES" => {
     "Test::Exception" => 0,
     "Test::More" => "0.96"
   },
-  "VERSION" => "0.04",
+  "VERSION" => "0.05",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -36,7 +36,8 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "Mojo::UserAgent" => 0,
+  "ExtUtils::MakeMaker" => 0,
+  "Mojo::UserAgent" => "6.36",
   "Test::Exception" => 0,
   "Test::More" => "0.96",
   "XML::Simple" => 0
