@@ -1,6 +1,7 @@
 Revision history for WebService-MyAffiliates
 
 {{$NEXT}}
+        - fix cookie_jar ignore
 
 0.04  2014-10-14 13:13:10 CST
         - under wrong ACCOUNT
